--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,42 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+
+#categories {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  padding: 24px;
+  list-style-type: none;
+  max-width: 440px;
+}
+
+#categories h2 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.33333;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  padding: 16px 0 16px 16px;
+  margin: 0;
+}
+
+#categories > li > ul {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  list-style-type: none;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  padding: 0px 16px 16px 16px;
+}
+
+#categories > li > ul > li {
+  padding: 8px 0px 8px 16px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  max-width: 360px;
+}
