--- a/css/common.css
+++ b/css/common.css
@@ -72,3 +72,24 @@ body {
   height: 300px;
   object-fit: cover;
 }
+
+/*task 3*/
+#name-input {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  min-width: 360px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  padding: 8px 0px 8px 16px;
+}
+
+h1 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.33333;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
